--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>당;연(聯)</title>
   <style>
     body {
@@ -11,9 +12,13 @@
       color: white;
       text-align: center;
     }
+
     .container {
       padding: 30px 20px;
+      max-width: 800px;
+      margin: 0 auto;
     }
+
     .logo-circle {
       width: 100px;
       height: 100px;
@@ -21,54 +26,73 @@
       background-color: #3399ff;
       margin: 0 auto 20px;
     }
+
     h1 {
       margin: 10px 0;
       font-size: 28px;
     }
+
     p.subtitle {
       font-size: 16px;
       line-height: 1.5;
       color: #e0e0e0;
     }
+
     .icon-row {
       display: flex;
       justify-content: center;
-      gap: 20px;
+      flex-wrap: wrap;
+      gap: 10px;
       margin: 20px 0;
     }
+
     .icon-row a {
       color: white;
       font-size: 24px;
       text-decoration: none;
       border: 2px solid white;
       border-radius: 10px;
-      padding: 10px;
+      padding: 10px 15px;
     }
+
     .grid {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
       gap: 20px;
       margin: 30px 0;
     }
+
     .grid-item {
       background-color: white;
       color: #333;
       padding: 20px;
       border-radius: 15px;
       font-weight: bold;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
     .grid-item img {
-      max-width: 100px;
-      margin-bottom: 10px;
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
     }
+
     .footer-link {
       background-color: white;
       color: #333;
       padding: 15px;
-      margin: 20px;
+      margin: 20px 0;
       border-radius: 10px;
       font-weight: bold;
     }
+
+    .footer-link a {
+      color: #333;
+      text-decoration: none;
+    }
+
     .credit {
       font-size: 12px;
       margin-top: 20px;
@@ -84,6 +108,7 @@
       성인 1형당뇨인들을 연잇는<br>
       (사)한국1형당뇨병환우회의 성인모임
     </p>
+
     <div class="icon-row">
       <a href="#">🌐</a>
       <a href="#">▶️</a>
@@ -93,31 +118,35 @@
 
     <div class="grid">
       <div class="grid-item">
-	<a href="https://concierge.soldoc.co.kr/barocarenew/sub5?utm_source=naver&utm_medium=insulinmap_2506&utm_campaign=insulinmap_2506&utm_content=insulinmap_2506&utm_term=insulinmap_2506">
-        <img src="./resources/image/image_map.png" alt="인슐린 약국지도">
-         </a>
-      </div>
-      <div class="grid-item">
- 	<a href="https://cafe.naver.com/t1d">
-        <img src="./resources/image/image_logo2.png" alt="슈거트리 카페">
-         </a>
-      </div>
-      <div class="grid-item">
-	<a href="https://secure.donus.org/kst1d/pay/step1/">
-		<img src="./resources/image/image_donation.png" alt="후원신청">
+        <a href="https://concierge.soldoc.co.kr/barocarenew/sub5?utm_source=naver&utm_medium=insulinmap_2506&utm_campaign=insulinmap_2506&utm_content=insulinmap_2506&utm_term=insulinmap_2506" target="_blank">
+          <img src="./resources/image/image_map.png" alt="인슐린 약국지도">
         </a>
-        </div>
+      </div>
       <div class="grid-item">
-        	<a href="http://www.kst1d.org/">
-        <img src="./resources/image/image_logo.png" alt="환우회 홈페이지">
-</a>
+        <a href="https://cafe.naver.com/t1d" target="_blank">
+          <img src="./resources/image/image_logo2.png" alt="슈거트리 카페">
+        </a>
+      </div>
+      <div class="grid-item">
+        <a href="https://secure.donus.org/kst1d/pay/step1/" target="_blank">
+          <img src="./resources/image/image_donation.png" alt="후원신청">
+        </a>
+      </div>
+      <div class="grid-item">
+        <a href="http://www.kst1d.org/" target="_blank">
+          <img src="./resources/image/image_logo.png" alt="환우회 홈페이지">
+        </a>
       </div>
     </div>
 
     <div class="footer-link">
-      <a href="https://www.youtube.com/watch?si=g-W6fsQGcuqhuKGz&v=GuzOK6KLd08&feature=youtu.be">
-      저혈당 올바른 대처법(유튜브)
-<a>
+      <a href="https://www.youtube.com/watch?si=g-W6fsQGcuqhuKGz&v=GuzOK6KLd08&feature=youtu.be" target="_blank">
+        저혈당 올바른 대처법(유튜브)
+      </a>
+    </div>
+
+    <div class="credit">
+      made by TagMe
     </div>
   </div>
 </body>
