--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>당;연(聯)</title>
   <style>
     body {
@@ -17,14 +17,6 @@
       padding: 30px 20px;
       max-width: 800px;
       margin: 0 auto;
-    }
-
-    .logo-circle {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      background-color: #3399ff;
-      margin: 0 auto 20px;
     }
 
     h1 {
@@ -50,9 +42,17 @@
       color: white;
       font-size: 24px;
       text-decoration: none;
-      border: 2px solid white;
+      border: none; /* 테두리 제거 */
       border-radius: 10px;
       padding: 10px 15px;
+      outline: none;
+    }
+
+    .icon-row a:focus,
+    .icon-row a:active,
+    .icon-row a:hover {
+      outline: none;
+      border: none;
     }
 
     .grid {
@@ -65,7 +65,6 @@
     .grid-item {
       background-color: white;
       color: #333;
-      padding: 20px;
       border-radius: 15px;
       font-weight: bold;
       display: flex;
@@ -77,6 +76,18 @@
       max-width: 100%;
       height: auto;
       border-radius: 10px;
+      border: none;  /* 이미지 테두리 제거 */
+      outline: none;
+    }
+
+    a img {
+      border: none;
+      outline: none;
+    }
+
+    a:focus, a:active, a:hover {
+      outline: none;
+      border: none;
     }
 
     .footer-link {
@@ -91,6 +102,14 @@
     .footer-link a {
       color: #333;
       text-decoration: none;
+      outline: none;
+    }
+
+    .footer-link a:focus,
+    .footer-link a:active,
+    .footer-link a:hover {
+      outline: none;
+      border: none;
     }
 
     .credit {
@@ -102,10 +121,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo-circle"></div>
     <h1>당;연(聯)</h1>
     <p class="subtitle">
-      성인 1형당뇨인들을 연잇는<br>
+      성인 1형당뇨인들을 연잇는<br />
       (사)한국1형당뇨병환우회의 성인모임
     </p>
 
@@ -118,35 +136,31 @@
 
     <div class="grid">
       <div class="grid-item">
-        <a href="https://concierge.soldoc.co.kr/barocarenew/sub5?utm_source=naver&utm_medium=insulinmap_2506&utm_campaign=insulinmap_2506&utm_content=insulinmap_2506&utm_term=insulinmap_2506" target="_blank">
-          <img src="./resources/image/image_map.png" alt="인슐린 약국지도">
+        <a href="https://concierge.soldoc.co.kr/barocarenew/sub5?utm_source=naver&utm_medium=insulinmap_2506&utm_campaign=insulinmap_2506&utm_content=insulinmap_2506&utm_term=insulinmap_2506" target="_blank" rel="noopener noreferrer">
+          <img src="./resources/image/image_map.png" alt="인슐린 약국지도" />
         </a>
       </div>
       <div class="grid-item">
-        <a href="https://cafe.naver.com/t1d" target="_blank">
-          <img src="./resources/image/image_logo2.png" alt="슈거트리 카페">
+        <a href="https://cafe.naver.com/t1d" target="_blank" rel="noopener noreferrer">
+          <img src="./resources/image/image_logo2.png" alt="슈거트리 카페" />
         </a>
       </div>
       <div class="grid-item">
-        <a href="https://secure.donus.org/kst1d/pay/step1/" target="_blank">
-          <img src="./resources/image/image_donation.png" alt="후원신청">
+        <a href="https://secure.donus.org/kst1d/pay/step1/" target="_blank" rel="noopener noreferrer">
+          <img src="./resources/image/image_donation.png" alt="후원신청" />
         </a>
       </div>
       <div class="grid-item">
-        <a href="http://www.kst1d.org/" target="_blank">
-          <img src="./resources/image/image_logo.png" alt="환우회 홈페이지">
+        <a href="http://www.kst1d.org/" target="_blank" rel="noopener noreferrer">
+          <img src="./resources/image/image_logo.png" alt="환우회 홈페이지" />
         </a>
       </div>
     </div>
 
     <div class="footer-link">
-      <a href="https://www.youtube.com/watch?si=g-W6fsQGcuqhuKGz&v=GuzOK6KLd08&feature=youtu.be" target="_blank">
+      <a href="https://www.youtube.com/watch?si=g-W6fsQGcuqhuKGz&v=GuzOK6KLd08&feature=youtu.be" target="_blank" rel="noopener noreferrer">
         저혈당 올바른 대처법(유튜브)
       </a>
-    </div>
-
-    <div class="credit">
-      made by TagMe
     </div>
   </div>
 </body>
