--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="footer-link">
+      <div class="youtube-link">
         <a
           href="https://youtu.be/DZBXLayBek4?si=rtrAerObSBMAdYfT"
           target="_blank"
